--- a/package.json
+++ b/package.json
@@ -6,8 +6,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.14",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "postcss": "^8.4.41",
+        "postcss-nesting": "^12.1.5",
+        "tailwindcss": "^3.4.10",
+        "vite": "^5.0",
+        "vite-plugin-compression2": "^1.1.2"
+    },
+    "dependencies": {
+        "@alpinejs/focus": "^3.14.1",
+        "@fontsource/raleway": "^5.0.19",
+        "alpinejs-animate": "^0.1.0",
+        "animate.css": "^4.1.1",
+        "aos": "^2.3.4",
+        "keen-slider": "^6.8.6"
     }
 }
