--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "mokhosh/filament-rating": "^1.1",
+        "spatie/filament-simple-stats": "^0.1.4",
         "spatie/laravel-sluggable": "^3.6"
     },
     "require-dev": {
