--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "alpinejs-animate": "^0.1.3",
         "animate.css": "^4.1.1",
         "aos": "^2.3.4",
+        "cute-alert": "^0.0.3",
         "keen-slider": "^6.8.6",
         "swiper": "^11.1.12"
     }
