--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "aos": "^2.3.4",
         "cute-alert": "^0.0.3",
         "keen-slider": "^6.8.6",
+        "lightgallery": "^2.7.2",
         "swiper": "^11.1.12"
     }
 }
