--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "livewire/livewire": "^3.5",
         "mokhosh/filament-rating": "^1.1",
         "rmsramos/activitylog": "^1.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/filament-simple-stats": "^0.1.4",
         "spatie/laravel-sluggable": "^3.6"
     },
