--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "bezhansalleh/filament-shield": "^3.2",
         "binafy/laravel-cart": "^1.0",
         "charrafimed/global-search-modal": "^3.3",
@@ -22,6 +23,7 @@
         "rmsramos/activitylog": "^1.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/filament-simple-stats": "^0.1.4",
+        "spatie/laravel-pdf": "^1.5",
         "spatie/laravel-sluggable": "^3.6"
     },
     "require-dev": {
