--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "@alpinejs/focus": "^3.14.1",
         "@fontsource/overpass": "^5.1.0",
+        "@splidejs/splide": "^4.1.4",
+        "@splidejs/splide-extension-auto-scroll": "^0.5.3",
         "alpinejs": "^3.14.1",
         "alpinejs-animate": "^0.1.3",
         "animate.css": "^4.1.1",
@@ -28,6 +30,7 @@
         "lightgallery": "^2.7.2",
         "photoswipe": "^5.4.4",
         "puppeteer": "^23.9.0",
-        "swiper": "^11.1.12"
+        "swiper": "^11.1.12",
+        "tailwindcss-animation-delay": "^2.0.1"
     }
 }
