--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
         "postcss-nesting": "^12.1.5",
+        "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.12",
         "vite": "^5.0",
         "vite-plugin-compression2": "^1.1.2"
