--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.26.3",
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
         "autoprefixer": "^10.4.20",
@@ -23,6 +24,7 @@
         "@fontsource/overpass": "^5.1.0",
         "@splidejs/splide": "^4.1.4",
         "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+        "@vitejs/plugin-react": "^4.3.4",
         "alpinejs": "^3.14.1",
         "alpinejs-animate": "^0.1.3",
         "animate.css": "^4.1.1",
@@ -31,6 +33,8 @@
         "lightgallery": "^2.7.2",
         "photoswipe": "^5.4.4",
         "puppeteer": "^23.9.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "swiper": "^11.1.12",
         "tailwindcss-animation-delay": "^2.0.1"
     }
