Add sanctum api

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "filament/filament": "*",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "mokhosh/filament-rating": "^1.1",
